fix payment style

--- a/server/templates/paymentOrder.jade
+++ b/server/templates/paymentOrder.jade
@@ -17,8 +17,8 @@ html(lang='en')
                               .col-md-12
                                   h2 Варианты оплаты:
                               .col-md-12
-                                  ul#container.nav.nav-pills.col-md-12
-                              .col-md-9.description.hide#description
+                                  ul#container.nav.nav-pills.col-md-12.mb-15
+                              .col-md-9.description.hide.mb-15#description
                               .col-md-4#paymentBlock
                                   if payments.interkassa
                                     include ./payments/interkassa.jade
