--- a/server/templates/payments/interkassa.jade
+++ b/server/templates/payments/interkassa.jade
@@ -9,4 +9,4 @@ form#interkassa.hide(name='payment', method='post', action='https://sci.interkas
     input(name='ik_ia_m', type='hidden', value='#{payments.interkassa.ik_ia_m}')
     input(name='ik_suc_u', type='hidden', value='#{payments.interkassa.ik_suc_u}')
     input(name='ik_suc_m', type='hidden', value='#{payments.interkassa.ik_suc_m}')
-    input.btn.btn-danger.btn-lg(type='submit', value='Оплатить')
+    input.btn.btn-danger.btn-lg.mb-15(type='submit', value='Оплатить')
