fix payment style

--- a/server/templates/payments/yandex.jade
+++ b/server/templates/payments/yandex.jade
@@ -17,4 +17,4 @@ form#yandex.hide(method='POST', action='#{payments.yandex.action}')
           input(type='radio', name='paymentType', value='AC')
           |                     Банковской картой
         br
-        input.btn(type='submit', value='Оплатить')
+        input.btn.mb-15(type='submit', value='Оплатить')
