html email sending done

--- a/common/scss/design2/ui_alert.scss
+++ b/common/scss/design2/ui_alert.scss
@@ -37,8 +37,8 @@
   &.alert-success {
 
     color: #76AF5C;
-    border: 1px solid #82D85B;;
-    border-left: 6px solid #82D85B;
+    border: 1px solid #8CC578;;
+    border-left: 6px solid #8CC578;
 
     .alert-body {
       color: #76AF5C;
