--- a/common/scss/design2/ui_pricing_box.scss
+++ b/common/scss/design2/ui_pricing_box.scss
@@ -60,7 +60,7 @@ li.price_col {
   height: 52px;
   line-height: 52px;
   letter-spacing: -1px;
-  border-bottom: #82D85B solid 3px;
+  border-bottom: #8CC578 solid 3px;
 }
 
 .pricing_box li.price_col {
