fix letters template

--- a/server/templates/letters/staffRegister.jade
+++ b/server/templates/letters/staffRegister.jade
@@ -60,8 +60,6 @@ doctype html
 html
   head
     style(type='text/css').
-      h2.foo {color: red}
+      p{font-family:Tahoma,sans-serif;font-size:12px;margin:0}
   body
-    h2.foo
-      | Email content here
-
+    p Email content here
