--- a/server/templates/letters/staffRegister.jade
+++ b/server/templates/letters/staffRegister.jade
@@ -1,65 +1,58 @@
-//doctype html
-//html
-//  head
-//    meta(http-equiv='Content-Type', content='text/html')
-//    style.
-//      .content, .header {
-//      padding: 0 40px;
-//      }
-//      p {
-//      margin: 10px 0;
-//      }
-//      p.header {
-//      background: #8CC578;
-//      line-height: 66px;
-//      color: #fff;
-//      font-size: 25px;
-//      }
-//      div.content {
-//      margin: 30px 0;
-//      }
-//      div.content .button {
-//      text-align: center;
-//      }
-//      div.content .button a {
-//      background: #8cc578;
-//      color: #fff;
-//      text-decoration: none;
-//      height: 60px;
-//      line-height: 60px;
-//      width: 100%;
-//      max-width: 250px;
-//      display: block;
-//      text-transform: uppercase;
-//      margin: 35px auto;
-//      }
-//      div.sign {
-//      padding: 5px 40px;
-//      line-height: 10px;
-//      font-size: 15px;
-//      color: #333232;
-//      background: #cccaca;
-//      }
-//      div.sign :last-child {
-//      margin-top: 20px;
-//      }
-//  body
-//    p.header INPAY
-//    .content
-//      h4 Данные для входа на сайт #{domain} для сотрудника:
-//      p Ссылка для входа на сайт: #{userUrl}.
-//      p Ваш логин: #{userLogin}.
-//      p Ваш логин: #{userPassword}.
-//    .sign
-//      p С уважением,
-//      p команда INPAY
-//      p
-//        a(href='http://#{domain}') http://#{domain}
-
 doctype html
 html
   head
-    style(type='text/css').
-      p{font-family:Tahoma,sans-serif;font-size:12px;margin:0}
+    meta(http-equiv='Content-Type', content='text/html')
+    style.
+      .content, .header {
+      padding: 0 40px;
+      }
+      p {
+      margin: 10px 0;
+      }
+      p.header {
+      background: #8CC578;
+      line-height: 66px;
+      color: #fff;
+      font-size: 25px;
+      }
+      div.content {
+      margin: 30px 0;
+      }
+      div.content .button {
+      text-align: center;
+      }
+      div.content .button a {
+      background: #8cc578;
+      color: #fff;
+      text-decoration: none;
+      height: 60px;
+      line-height: 60px;
+      width: 100%;
+      max-width: 250px;
+      display: block;
+      text-transform: uppercase;
+      margin: 35px auto;
+      }
+      div.sign {
+      padding: 5px 40px;
+      line-height: 10px;
+      font-size: 15px;
+      color: #333232;
+      background: #cccaca;
+      }
+      div.sign :last-child {
+      margin-top: 20px;
+      }
   body
-    p Email content here
+    p.header INPAY
+    .content
+      h4 Данные для входа на сайт #{domain} для сотрудника:
+      p Ссылка для входа на сайт: #{userUrl}.
+      p Ваш логин: #{userLogin}.
+      p Ваш логин: #{userPassword}.
+    .sign
+      p С уважением,
+      p команда INPAY
+      p
+        a(href='http://#{domain}') http://#{domain}
+
